<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartTime" />

            <TextView
                android:id="@+id/textViewStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleStopTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StopTime" />

            <TextView
                android:id="@+id/textViewStopTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Status" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleSuccessCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SuccessCount" />

            <TextView
                android:id="@+id/textViewSuccessCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleFailedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FailedCount" />

            <TextView
                android:id="@+id/textViewFailedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleLastStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LastStatus" />

            <TextView
                android:id="@+id/textViewLastStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleRootedStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RootedStatus" />

            <TextView
                android:id="@+id/textViewRootedStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitleCurrentUAMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CurrentUAMode" />

            <TextView
                android:id="@+id/textViewCurrentUAMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>